@@ -3,6 +3,8 @@ Version 2.2 (2021/08/?)
     - Utilize std::vector::reserve to avoid reallocations
   API changes:
     - add_{face,edge,cell} takes an std::vector by value instead of by const reference.
+    - add_face topology check is more strict: the halfedges need to be in circular order.
+
 Version 2.1 (2019/09/09)
 - Modern target-based CMake 3 build system
 - !!!Break compatiblity with C++98, require C++11 as mininum!!!
